--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>I am a creative Web Developer dedicated to structuring,developing and implementing interactive websites. Proven ability in optimizing web functionality that improve data retrieval and workflow efficiences.</p>
         </div>
 
         <div class="row">
@@ -313,7 +313,7 @@
 
         <div class="section-title">
           <h2>Portfolio</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p> Hi. I am a Web Developer and UI/UX enthusiast. Check out my latest services in my web page and the projects which I have completed. Feel free to look upon my work and pictures at my page.</p>
         </div>
 
         <div class="row" data-aos="fade-up">
